feat: implement v2 solution documents
